--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.0",
+    "@mui/styles": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "material-table": "^2.0.3",
     "npm": "^8.14.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
