--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-phone-input-2": "^2.15.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
